--- a/style.css
+++ b/style.css
@@ -19,22 +19,14 @@ p {
   color: white;
 }
 
-.i1 {
-background-color: #A52A2A;
-}
-.i2 {
-background-color: #DEB887;
-}
-.i3 {
-background-color: #5F9EA0;
-}
+
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 1200px) {
+/********** Desktop **********/
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     border: 1px solid green;
@@ -77,8 +69,8 @@ background-color: #5F9EA0;
   }
 }
 
-/********** Medium devices only **********/
-@media (min-width: 950px) and (max-width: 1199px) {
+/********** Tablet **********/
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     border: 1px solid green;
@@ -120,4 +112,6 @@ background-color: #5F9EA0;
     width: 100%;
   }
 }
+
+/********** Mobile **********/
 
