--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ p {
   width: 100%;
   height: 150px;
   margin-right: auto;
+  margin-left: auto;
   font-family: Helvetica;
   color: white;
 }
@@ -27,6 +28,7 @@ p {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     border: 1px solid green;
+    width: 100%
   }
   .col-lg-1 {
     width: 8.33%;
@@ -71,6 +73,7 @@ p {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     border: 1px solid green;
+    width: 100%;
   }
   .col-md-1 {
     width: 8.33%;
@@ -115,6 +118,7 @@ p {
   .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
     float: left;
     border: 1px solid green;
+    width: 100%;
   }
   .col-sd-1 {
     width: 8.33%;
