--- a/style.css
+++ b/style.css
@@ -21,14 +21,21 @@ p {
 .row {
   width: 100%;
 }
-
+.box1 {
+ background-color: #FFA07A;
+}
+.box2 {
+ background-color: #E9967A;
+}
+.box3 {
+ background-color: #FA8072;
+}
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     width: 100%;
-    background-color: #FFA07A;
-  }
+    }
   .col-lg-1 {
     width: 8.33%;
   }
@@ -72,8 +79,7 @@ p {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     width: 100%;
-    background-color: #E9967A;
-  }
+    }
   .col-md-1 {
     width: 8.33%;
   }
@@ -117,8 +123,7 @@ p {
   .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
     float: left;
     width: 100%;
-    background-color: #FA8072;
-  }
+   }
   .col-sd-1 {
     width: 8.33%;
   }
