--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 /********** Base styles **********/
-
+* {
+  box-sizing: border-box;
+}
 h1 {
   margin-bottom: 15px;
 }
@@ -13,6 +15,7 @@ p {
   margin-left: auto;
   font-family: Helvetica;
   color: white;
+  position: absolute;
 }
 
 /* Simple Responsive Framework. */
@@ -20,13 +23,13 @@ p {
   width: 100%;
 }
 .box1 {
- background-color: #FFA07A;
+ background-color: red;
 }
 .box2 {
- background-color: #E9967A;
+ background-color: green;
 }
 .box3 {
- background-color: #FA8072;
+ background-color: yellow;
 }
 /********** Large devices only **********/
 @media (min-width: 992px) {
