--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@ p {
 .row {
   width: 100%;
 }
-.box1 {
+.row.box1 {
  background-color: red;
 }
-.box2 {
+.row.box2 {
  background-color: green;
 }
-.box3 {
+.row.box3 {
  background-color: yellow;
 }
 /********** Large devices only **********/
