--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /********** Base styles **********/
 * {
   box-sizing: border-box;
@@ -22,13 +21,13 @@ p {
 .row {
   width: 100%;
 }
-.box1 {
+#box1 {
  background-color: red;
 }
-.box2 {
+#box2 {
  background-color: green;
 }
-.box3 {
+#box3 {
  background-color: yellow;
 }
 /********** Large devices only **********/
