--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
 }
 
 p {
+  background-color: blue;
   border: 1px solid black;
   width: 100%;
   height: 150px;
@@ -15,21 +16,6 @@ p {
   font-family: Helvetica;
   color: white;
   position: absolute;
-}
-#box1 {
- background-color: yellow;
- width: 100%;
- border: 1px solid black;
-}
-#box2 {
- background-color: yellow;
- width: 100%;
- border: 1px solid black;
-}
-#box3 {
- background-color: yellow;
- width: 100%;
- border: 1px solid black;
 }
 
 /* Simple Responsive Framework. */
