--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ h1 {
 }
 
 p {
-  background-color: blue;
   border: 1px solid black;
   width: 100%;
   height: 150px;
@@ -15,16 +14,19 @@ p {
   margin-left: auto;
   font-family: Helvetica;
   color: white;
-  text-align: right;
+  
 }
 #item1 {
   background-color: #A52A2A;
+  text-align: right;
 }
 #item2 {
   background-color: #DEB887;
+  text-align: right;
 }
 #item3 {
   background-color: #5F9EA0;
+  text-align: left;
 }
 
 
