--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ p {
   background-color: #A52A2A;
   text-align: right;
 }
+#item1 h1{
+font-size: 12px
+}
 #item2 {
   background-color: #DEB887;
   text-align: right;
