--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ p {
   margin-left: auto;
   font-family: Helvetica;
   color: white;
-  
+  overflow-wrap: break-all;
+  word-wrap: break-all;
+  hyphens: auto;
+  line-break: auto;
 }
 #item1 {
   background-color: #A52A2A;
