--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
 }
 h1 {
   margin-bottom: 15px;
+  font-size: 75%
 }
-
+h2 {
+text-align: center;
+font-size: 25%;
+}
 div {
   border: 1px solid black;
   width: 100%;
@@ -18,16 +22,16 @@ div {
   }
 #item1 {
   background-color: #A52A2A;
-  text-align: right;
+  text-align: center;
 }
 }
 #item2 {
   background-color: #DEB887;
-  text-align: right;
+  text-align: center;
 }
 #item3 {
   background-color: #5F9EA0;
-  text-align: right;
+  text-align: center;
 }
 
 
