--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h2 {
 text-align: center;
 font-size: 25%;
 }
-div {
+p {
   border: 1px solid black;
   width: 100%;
   height: 150px;
@@ -19,6 +19,7 @@ div {
   font-family: Helvetica;
   color: white;
   hyphens: auto;
+  font-size: 14px;
   }
 #item1 {
   background-color: #A52A2A;
