--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h2 {
 text-align: right;
 font-size: 1.25em;
 border: 1px solid black;
+position: relative;
 }
 div {
   border: 1px solid black;
@@ -93,7 +94,7 @@ div {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     #item2 {
-    width: 100%;
+    width: 200%;
     }
         }
   .col-md-1 {
