--- a/style.css
+++ b/style.css
@@ -6,10 +6,23 @@ h1 {
   margin-bottom: 15px;
   font-size: 1.75em;
 }
+
 h2 {
 text-align: right;
 font-size: 1.25em;
 border: 1px solid black;
+}
+
+#item1 h2 {
+background-color: #FFD700;
+}
+
+#item1 h2 {
+background-color: #FFA500;
+}
+
+#item1 h2 {
+background-color: #FF00FF;
 }
 div {
   border: 1px solid black;
@@ -26,16 +39,19 @@ div {
 #item1 {
   background-color: #A52A2A;
   text-align: center;
+  padding: 10px;
 }
 
 #item2 {
   background-color: #DEB887;
   text-align: center;
+  padding: 10px;
 }
 
 #item3 {
   background-color: #5F9EA0;
   text-align: center;
+  padding: 10px;
 }
 
 
