--- a/style.css
+++ b/style.css
@@ -11,24 +11,26 @@ h2 {
 text-align: right;
 font-size: 1.25em;
 border: 1px solid white;
+width: 250px;
 }
 
 #item1 h2 {
 background-color: #FFC0CB;
-width: 100px;
-padding: auto;
+width: 10px;
+padding-right: auto;
+padding-left: auto;
 }
 
 #item2 h2 {
 background-color: #8A2BE2;
-width: 250px;
-padding: auto;
+padding-right: auto;
+padding-left: auto;
 }
 
 #item3 h2 {
 background-color: #7B68EE;
-width: 160px;
-padding: auto;
+padding-right: auto;
+padding-left: auto;
 }
 
 div {
