--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 h2 {
-text-align: right;
+text-align: center;
 font-size: 1.25em;
 border: 1px solid white;
 width: 250px;
@@ -44,24 +44,24 @@ div {
   background-color: #C71585;
   text-align: center;
   padding: auto;
-  margin-right: auto;
-  margin-left: auto;
-  }
+  margin-right: 5px;
+  margin-left: 5px;
+   }
 
 #item2 {
   background-color: #4B0082;
   text-align: center;
   padding: auto;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 5px;
+  margin-left: 5px;
   }
 
 #item3 {
   background-color: #483D8B;
   text-align: center;
   padding: auto;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 
