--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 h1 {
   margin-bottom: 15px;
@@ -11,7 +13,7 @@ h2 {
 text-align: center;
 font-size: 1.25em;
 border: 1px solid white;
-width: 250px;
+width: 85%;
 padding-right: auto;
 padding-left: auto;
 }
