--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 h1 {
   margin-bottom: 15px;
