--- a/style.css
+++ b/style.css
@@ -46,18 +46,24 @@ div {
   background-color: #C71585;
   text-align: center;
   padding: auto;
+    margin-right: 5px;
+  margin-left: 5px;
    }
 
 #item2 {
   background-color: #4B0082;
   text-align: center;
   padding: auto;
+    margin-right: 5px;
+  margin-left: 5px;
    }
 
 #item3 {
   background-color: #483D8B;
   text-align: center;
   padding: auto;
+    margin-right: 5px;
+  margin-left: 5px;
  }
 
 
