--- a/style.css
+++ b/style.css
@@ -11,55 +11,34 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
-text-align: center;
-font-size: 1.25em;
-border: 1px solid white;
-width: 70%;
-padding-right: auto;
-padding-left: auto;
+section {
+	border:	1px solid black;
+	background-color: gray;
+	width: 100%;
+	height: 200px;
+  position: relative;
+	overflow: auto;
 }
-
-#item1 h2 {
-background-color: #FFC0CB;
-}
-
-#item2 h2 {
-background-color: #8A2BE2;
-}
-
-#item3 h2 {
-background-color: #7B68EE;
-}
-
-div {
-  border: 1px solid black;
-  height: 160px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-  hyphens: auto;
-  font-size: 14px;
-  }
 
 #item1 {
   background-color: #C71585;
   text-align: center;
   padding: auto;
+  border: 1px solid black;
    }
 
 #item2 {
   background-color: #4B0082;
   text-align: center;
   padding: auto;
+  border: 1px solid black;
    }
 
 #item3 {
   background-color: #483D8B;
   text-align: center;
   padding: auto;
+  border: 1px solid black;
     }
 
 
