--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+font-size: 14px;
+padding: 10px;
+margin: 0px;
+font-family: Arial, Helvetica, sans-serif;
+}
+
 section {
 	border:	1px solid black;
 	background-color: gray;
@@ -25,6 +32,7 @@ section {
   text-align: center;
   padding: auto;
   border: 1px solid black;
+  font-size: 1.25em;
    }
 
 #item2 {
@@ -32,6 +40,7 @@ section {
   text-align: center;
   padding: auto;
   border: 1px solid black;
+  font-size: 1.25em;
    }
 
 #item3 {
@@ -39,6 +48,7 @@ section {
   text-align: center;
   padding: auto;
   border: 1px solid black;
+  font-size: 1.25em;
     }
 
 
