--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ padding: 10px;
 margin: 0px;
 font-family: Arial, Helvetica, sans-serif;
 }
+.container {
+        border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+}
 
 section {
 	border:	1px solid black;
