--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 section {
 	border:	1px solid black;
-	background-color: gray;
+	background-color: #E6E6FA;
 	width: 100%;
 	height: 160px;
         position: relative;
@@ -36,7 +36,7 @@ section {
 }
 
 #item1 {
-  background-color: #C71585;
+  background-color: #BA55D3;
   text-align: center;
   padding: auto;
   border: 1px solid black;
@@ -46,7 +46,7 @@ section {
    }
 
 #item2 {
-  background-color: #4B0082;
+  background-color: #BA55D3;
   text-align: center;
   padding: auto;
   border: 1px solid black;
@@ -56,7 +56,7 @@ section {
    }
 
 #item3 {
-  background-color: #483D8B;
+  background-color: #BA55D3;
   text-align: center;
   padding: auto;
   border: 1px solid black;
